fix(): table filterDropdown overflow to screen

--- a/bricks/presentational-bricks/src/brick-table/BrickTable.module.css
+++ b/bricks/presentational-bricks/src/brick-table/BrickTable.module.css
@@ -2,6 +2,10 @@
   background-color: var(--color-fill-bg-base-4);
 }
 
+:global(.ant-table-filter-dropdown) {
+  position: relative;
+}
+
 html[data-theme="dark"] {
   .brickTableOddRow {
     background-color: #ffffff0a;
